--- a/views/teabo.ejs
+++ b/views/teabo.ejs
@@ -2,7 +2,6 @@
   <head>
   <title><%= title %></title>
   <script>
-
   var direction = false;
   var jap = 0;
   var teabo = '@(^0^)@';
@@ -14,8 +13,7 @@
     <h4 id="teabo">@(^0^)@</h4>
   </body>
   <script>
-
-  var player = document.getElementById('teabo')
+  var player = document.getElementById('teabo');
 
   setInterval(() => {
     player.innerHTML = teabo
@@ -62,6 +60,6 @@
        break;
       }
     }
-  }, 1000);
+  }, 100);
   </script>
 </html>
